@startuml
class User {
    +int id
    +String username
    +String email
    +String password
    +createTaskBlock()
    +voteOnTask()
}

class TaskBlock {
    +int id
    +String name
    +int creator_id
    +addTask()
    +inviteMember()
}

class Task {
    +int id
    +String title
    +String description
    +String status
    +int taskblock_id
    +int creator_id
    +proposeVote()
}

class Vote {
    +int id
    +int task_id
    +int voter_id
    +String value
}

class Wallet {
    +int id
    +double balance
    +updateBalance()
}

User "1..*" -- "0..*" TaskBlock
(User,TaskBlock) .. Wallet

TaskBlock "1" -- "many" Task
Task "1" -- "many" Vote
@enduml
